objects/BMCServiceDesk__Chatter_Listener__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Auto_Reply_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Reply User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Listeners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Auto_Reply_to_Chatter__c</fullName>
        <label>Auto Reply to Chatter Post</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Chatter_Group__c</fullName>
        <label>Chatter Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Incident</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Chatter Listeners</relationshipLabel>
        <relationshipName>Chatter_Listeners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Keywords__c</fullName>
        <label>Hashtags</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Map_Chatter_User_to__c</fullName>
        <label>Save Chatter Post User as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Template__c</fullName>
        <formula>BMCServiceDesk__FKTemplate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User__c</fullName>
        <formula>BMCServiceDesk__Auto_Reply_User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_to_Follow_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable User to Auto Follow Record</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>